# SportFrei

./: .gitignore  AGENTS.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
.vibepit/: network.yaml
docs/plans/: 2026-02-15-dashboard-redesign.md
src/: main.rs
src/api/: client.rs  types.rs
src/ui/: app.rs
tests/: api_test.rs  types_test.rs  ui_test.rs
